--- a/package.json
+++ b/package.json
@@ -22,6 +22,13 @@
     "extract",
     "list"
   ],
-  "author": "Addy Osmani",
+  "engines": {
+    "node": ">=0.10.0"
+  },
+  "author": {
+    "name": "Addy Osmani",
+    "email": "addyosmani@gmail.com",
+    "url": "http://addyosmani.com"
+  },
   "license": "Apache2"
 }
