--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "oust": "./bin/oust.js"
   },
   "files": [
-    "index.js"
+    "index.js",
+    "./bin/oust.js"
   ],
   "scripts": {
     "test": "mocha"
