--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,9 @@
 language: node_js
 node_js:
-  - "12"
-  - "10"
-  - "8"
   - "6"
+  - "8"
+  - "10"
+  - "12"
+cache: npm
 notifications:
   email: false
