--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,7 +1,6 @@
 name: Tests
+
 on: [push, pull_request]
-env:
-  CI: true
 
 jobs:
   run:
@@ -11,19 +10,16 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        node: [8, 10, 12]
+        node: [8, 10, 12, 14]
 
     steps:
       - name: Clone repository
         uses: actions/checkout@v2
 
-      - name: Set Node.js version
-        uses: actions/setup-node@v1
+      - name: Set up Node.js
+        uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node }}
-
-      - run: node --version
-      - run: npm --version
 
       - name: Install npm dependencies
         run: npm ci
