readme and version updates

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "oust",
+  "name": "@piyushmishra/oust",
   "version": "1.2.0",
   "author": "Addy Osmani <addyosmani@gmail.com> (https://addyosmani.com/)",
   "license": "Apache-2.0",
