--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,6 +1,12 @@
 name: Tests
 
-on: [push, pull_request]
+on:
+    push:
+        branches:
+            - "**"
+            - "!dependabot/**"
+    pull_request:
+    workflow_dispatch:
 
 env:
     FORCE_COLOR: 2
@@ -13,16 +19,19 @@ jobs:
         strategy:
             fail-fast: false
             matrix:
-                node: [12, 14, 16]
+                node: [12, 14, 16, 18]
 
         steps:
             - name: Clone repository
-              uses: actions/checkout@v2
+              uses: actions/checkout@v3
+              with:
+                persist-credentials: false
 
             - name: Set up Node.js
-              uses: actions/setup-node@v2
+              uses: actions/setup-node@v3
               with:
                   node-version: ${{ matrix.node }}
+                  cache: npm
 
             - name: Install npm dependencies
               run: npm ci
