Add c8 for coverage

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
-node_modules
-test/sample/bower_components/jquery/src
-test/sample/bower_components/jquery/bower.json
-test/sample/bower_components/bootstrap/grunt
-test/sample/bower_components/bootstrap/grunt
-test/sample/bower_components/bootstrap/js
-test/sample/bower_components/bootstrap/less
-test/sample/bower_components/bootstrap/test-infra
-test/sample/bower_components/bootstrap/bower.json
-test/sample/bower_components/bootstrap/Gruntfile.js
+/coverage/
+/node_modules/
+/test/sample/bower_components/bootstrap/bower.json
+/test/sample/bower_components/bootstrap/grunt
+/test/sample/bower_components/bootstrap/Gruntfile.js
+/test/sample/bower_components/bootstrap/js
+/test/sample/bower_components/bootstrap/less
+/test/sample/bower_components/bootstrap/test-infra
+/test/sample/bower_components/jquery/bower.json
+/test/sample/bower_components/jquery/src
